tests/diagnostics/file_roles/manifest_declarations/function_declaration/expect.txt
# exit: 1
PACKAGE.coppice:1:1: error: PACKAGE.coppice may only contain exports declarations
  function helper() -> nil {
  ^
